--- a/html/index.html
+++ b/html/index.html
@@ -14,16 +14,26 @@
 <body>
 
     <header class="header">
-        <div class="logo">
-            <img src="logo.png" alt="DIMENSION LOGO" class="img-logo">
+        <div class="header-left">
+            <div class="logo">
+                <img src="logo.png" alt="DIMENSION" class="img-logo">
+            </div>
         </div>
 
-        <ul>
-            <li onclick="doScroll(0)" class="nav-item active">메인</li>
-            <li onclick="doScroll(1)" class="nav-item">사전 등록</li>
-            <li onclick="doScroll(2)" class="nav-item">세계관</li>
-            <li onclick="doScroll(3)" class="nav-item">종족 소개</li>
-        </ul>
+        <nav class="header-center">
+            <ul>
+                <li onclick="doScroll(0)" class="nav-item active">메인</li>
+                <li onclick="doScroll(1)" class="nav-item">사전 등록</li>
+                <li onclick="doScroll(2)" class="nav-item">세계관</li>
+                <li onclick="doScroll(3)" class="nav-item">종족 소개</li>
+            </ul>
+        </nav>
+
+        <div class="header-right">
+            <img src="icon_share.png" alt="share" class="icon-sns">
+            <img src="icon_youtube.png" alt="youtube" class="icon-sns">
+            <img src="icon_instagram.png" alt="instagram" class="icon-sns">
+        </div>
     </header>
 
     <main class="main">
@@ -37,15 +47,28 @@
                 <div class="pre-reg-btn-img" onclick="doScroll(1)">
                     <img src="btn_register.png" alt="사전등록하기" class="img-btn-reg">
                 </div>
+
+                <div class="store-group">
+                    <a href="#" target="_blank"><img src="store_apple.png" alt="App Store" class="img-store"></a>
+                    <a href="#" target="_blank"><img src="store_google.png" alt="Google Play" class="img-store"></a>
+                    <a href="#" target="_blank"><img src="store_steam.png" alt="Steam" class="img-store"></a>
+                </div>
             </div>
         </section>
 
-        <section class="section-common">
-            <h2>사전 등록</h2>
+        <section class="section-pre-reg">
+            <div class="content-box">
+                <p class="sub-text">차원자 구원자의 복수의 서막에 합류하세요</p>
+                <div class="temp-form-area">
+                    <img src="Page2_1.png" alt="입력창 영역" style="max-width: 100%; height: auto;">
+                </div>
+            </div>
         </section>
 
-        <section class="section-common">
-            <h2>세계관</h2>
+        <section class="section-story">
+            <div class="story-content">
+                <img src="page3.png" alt="세계관 설명" class="img-story-ui">
+            </div>
         </section>
 
         <section class="section-race">
